@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.10 2004/01/06 07:17:13 jlam Exp $
+# $NetBSD: Makefile.common,v 1.11 2004/01/06 15:44:10 hubertf Exp $
 #
 # This Makefile.common is included by:
 #
@@ -8,7 +8,7 @@
 # If these packages are updated, please remember to reset any PKGREVISIONs
 # in those Makefiles.
 
-DISTNAME=       xlockmore-5.11
+DISTNAME=       xlockmore-5.11.1
 CATEGORIES=	x11
 MASTER_SITES=	ftp://ftp.tux.org/pub/tux/bagleyd/xlockmore/ \
 		${MASTER_SITE_XCONTRIB:=applications/}
