@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4370 2004/01/06 12:03:20 wiz Exp $
+$NetBSD: CHANGES,v 1.4371 2004/01/06 15:44:09 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -74,3 +74,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Moved cvsup-gui-16.1h to cvsup-gui-bin-16.1h [xtraeme 2004-01-06]
 	Added p5-SOAP-Lite-0.55 [grant 2004-01-06]
 	Delete kochi-cid [uebayasi 2004-01-06]
+	Updated xlockmore to 5.11.1 [hubertf 2004-01-06]
